solve for Z progress

--- a/Experiments/Math_Equasions/Solve_For_Z_Matrix/Solve_For_Z.tex
+++ b/Experiments/Math_Equasions/Solve_For_Z_Matrix/Solve_For_Z.tex
@@ -276,12 +276,11 @@
         [w_2] + [b_2])[I_{1-2}] = 0
 \end{equation}
 
+\hbox{Go back to equ.3}
 
+\begin{equation}
+    [z][I_1] = [z][I_2]
+\end{equation}
 
-
-
-
-\section{Conclusion}
-Not much of a paper, but it's a start.
-
+\hbox{expand Z}
 \end{document}
