--- a/Experiments/Math_Equasions/Solve_for_Z_algibra/Solving_for_Z.tex
+++ b/Experiments/Math_Equasions/Solve_for_Z_algibra/Solving_for_Z.tex
@@ -429,6 +429,10 @@
 \end{multline}
 \hbox{This will got to EQ.43. This is a dead end.}
 
+\hbox{continue wiht eq.43}
+
+
+
 
 
 \section{Conclusion}
