--- a/Experiments/Math_Equasions/Solve_for_Z_algibra/Solving_for_Z.tex
+++ b/Experiments/Math_Equasions/Solve_for_Z_algibra/Solving_for_Z.tex
@@ -113,7 +113,7 @@
 \end{multline}
 
 \hbox{NOTE\@: this equation is too big. Lets scope it down.}
-
+\hbox{Define:}
 \begin{IEEEeqnarray}{rCl}
     B_1 = -w_{x_1->y_1} * x_1 + w_{x_2->y_1} * x_2 + b_{y_1}\\
     B_2 = -w_{x_1->y_2} * x_1 + w_{x_2->y_2} * x_2 + b_{y_2}\\
@@ -711,28 +711,53 @@
     C_0 + \exp[B_1^{C_1}] + \exp[B_2^{C_2}] + \exp[B_3^{C_3}] +\\
     \exp[(B_2+B_3)^{C_4}] + \exp[(B_1+B_3)^{C_5}] + \exp[(B_1+B_2)^{C_6}] +\\
     \exp[(B_1+B_2+B_3)^{C_7}] = 0\\
-\end{multline}
+\end{multline}  
 
 \hbox{Make non-zero}
 \begin{multline}\\
-    C_0 + \exp[B_1^{C_1}] + \exp[B_2^{C_2}] + \exp[B_3^{C_3}] +\\
-    \exp[(B_2+B_3)^{C_4}] + \exp[(B_1+B_3)^{C_5}] + \exp[(B_1+B_2)^{C_6}] +\\
-     = -\exp[(B_1+B_2+B_3)^{C_7}]\\
-\end{multline}
-
-\hbox{Make non-zero}
-\begin{multline}\\
-    \exp[B_1^{C_1}] + \exp[B_2^{C_2}] + \exp[B_3^{C_3}] +\\
+    \exp[B_1^{C_1}] + \exp[B_2^{C_2}] + \exp[B_3^{C_3}] +
     \exp[(B_2+B_3)^{C_4}] + \exp[(B_1+B_3)^{C_5}] + \exp[(B_1+B_2)^{C_6}] +\\
     \exp[(B_1+B_2+B_3)^{C_7}] = -C_0\\
 \end{multline}
 
-\hbox{Make non-zero}
+\hbox{Remmeber B}
 \begin{multline}\\
-    \exp[B_1^{C_1}] + \exp[B_2^{C_2}] + \exp[B_3^{C_3}] +\\
-    \exp[(B_2+B_3)^{C_4}] + \exp[(B_1+B_3)^{C_5}] + \exp[(B_1+B_2)^{C_6}] +\\
-    \exp[(B_1+B_2+B_3)^{C_7}] = -C_0\\
+    B_1 = -w_{x_1->y_1} * x_1 + w_{x_2->y_1} * x_2 + b_{y_1}\\
+    B_2 = -w_{x_1->y_2} * x_1 + w_{x_2->y_2} * x_2 + b_{y_2}\\
+    B_3 = -w_{x_1->y_3} * x_1 + w_{x_2->y_3} * x_2 + b_{y_3}\\
 \end{multline}
+
+\hbox{Explore with $B_1$}
+
+\begin{multline}\\
+    \exp[B_1^{C_1}] = \exp[(-w_{x_1->y_1} * x_1 + w_{x_2->y_1} * x_2 + b_{y_1})^{C_1}]\\
+    \exp[B_1^{C_1}] = {C_1}*\exp[(-w_{x_1->y_1} * x_1 + w_{x_2->y_1} * x_2 + b_{y_1})]\\
+    \exp[B_1^{C_1}] = {C_1}*\exp[(-w_{x_1->y_1} * x_1)]*\exp[(w_{x_2->y_1} * x_2)]*\exp[(b_{y_1})]\\
+    \exp[B_1^{C_1}] = {C_1}*\exp[x_1]^{-w_{x_1->y_1}}*
+                            \exp[x_2]^{w_{x_2->y_1} }*
+                            \exp[(b_{y_1})]\\ 
+\end{multline}
+\hbox{let $u = \exp[x_1]$}\\
+\hbox{let $v = \exp[x_2]$}
+
+\begin{multline}\\
+    \exp[B_1^{C_1}] = {C_1}*u^{-w_{x_1->y_1}}*
+                            v^{w_{x_2->y_1} }*
+                            \exp[(b_{y_1})]\\ 
+\end{multline}
+
+\hbox{NOTE: SANITY CHECK}
+\begin{multline}\\
+    1 = e^{ax}+e^{by}\\
+    2^{1} = 2^{e^{ax}+e^{by}}\\
+    2^{1} = 2^{e^{ax}}2^{e^{by}}\\
+    \log_{2}2^{1} = \log_{2}(2^{e^{ax}}2^{e^{by}})\\
+    \log_{2}2^{1} = \log_{2}(2^{e^{ax}}) + \log_{2}(2^{e^{by}})\\
+\end{multline}
+
+
+
+
 
 
 
