--- a/Experiments/Math_Equasions/Solve_for_Z_algibra/Solving_for_Z.tex
+++ b/Experiments/Math_Equasions/Solve_for_Z_algibra/Solving_for_Z.tex
@@ -706,57 +706,46 @@
     C_7*\exp[B_1+B_2+B_3] = 0\\
 \end{multline}
 
-\hbox{Move multipliers to exponents}
-\begin{multline}\\
-    C_0 + \exp[B_1^{C_1}] + \exp[B_2^{C_2}] + \exp[B_3^{C_3}] +\\
-    \exp[(B_2+B_3)^{C_4}] + \exp[(B_1+B_3)^{C_5}] + \exp[(B_1+B_2)^{C_6}] +\\
-    \exp[(B_1+B_2+B_3)^{C_7}] = 0\\
-\end{multline}  
+\hbox{Observe the Basics of Diff Eq:}
 
-\hbox{Make non-zero}
+\hbox{Given:}
+\begin{equation}
+    \frac{dy}{dx} = ky
+\end{equation}
+
+\hbox{The genral solution is:}
+\begin{equation}
+    y = Ce^{kx} = C*\exp[kx]
+\end{equation}
+\hbox{where $C$ and $k$ are constants (Remmeber that this C different than our $C_n$)}\\
+
+\hbox{Let me reorganize our equasion:}
 \begin{multline}\\
-    \exp[B_1^{C_1}] + \exp[B_2^{C_2}] + \exp[B_3^{C_3}] +
-    \exp[(B_2+B_3)^{C_4}] + \exp[(B_1+B_3)^{C_5}] + \exp[(B_1+B_2)^{C_6}] +\\
-    \exp[(B_1+B_2+B_3)^{C_7}] = -C_0\\
+    C_0 + C_1e^{B_1} + C_2e^{B_2} + C_3e^{B_3} +\\
+    %
+    C_4e^{B_2+B_3} + C_5e^{B_1+B_3} + C_6e^{B_1+B_2} +\\
+    C_7e^{B_1+B_2+B_3} = 0\\
 \end{multline}
 
+
+\paragraph{Explicitly, the idea going foward is to convert this into a system of differential equasions. Then use numerical meathods to get a 
+"close enough" solution that can be computed in "reasonable" time.  Equ. 69 is directly related to the variable B. Whatever method used
+to aproxomate B can be used again for the components of B. Since B is not the variables we care about, this proccess will be generalizable,
+and SHOULD scale to "deaper" equasions (This translates to allowing one to solve arbitrarily deap NN). It is also interesting to note that 
+$x_1$ and $x_2$ are not dependent variables. They are independent since the value of input neuron 1 is not related to the input neuron 2 value.
+This impleis that for tasks such as image detection and image processing where 1 pixel is not related to the value of another pixel will be 
+inherintly different than other tasks such as forcast predictions (where sunlight, windspeed, terrane, etc. are all dependent on each other).
+For our purposes, having $x_1$ and $x_2$ be indepenent means that they can be decoupled allsowing for simpler ODE meathods. Being able to
+use simplar ODE methods means this will be be scaleable to $x_n$.}
+\paragraph{TLDR: By solving for B instead of directly for $x_1, x_2$ than there is a method for solving Deep NN's. Having $x_1, x_2$ be independent
+variables than we can solve for an arbitrary number of inputs.\newline} 
+
 \hbox{Remmeber B}
-\begin{multline}\\
+\begin{multline}
     B_1 = -w_{x_1->y_1} * x_1 + w_{x_2->y_1} * x_2 + b_{y_1}\\
     B_2 = -w_{x_1->y_2} * x_1 + w_{x_2->y_2} * x_2 + b_{y_2}\\
     B_3 = -w_{x_1->y_3} * x_1 + w_{x_2->y_3} * x_2 + b_{y_3}\\
 \end{multline}
-
-\hbox{Explore with $B_1$}
-
-\begin{multline}\\
-    \exp[B_1^{C_1}] = \exp[(-w_{x_1->y_1} * x_1 + w_{x_2->y_1} * x_2 + b_{y_1})^{C_1}]\\
-    \exp[B_1^{C_1}] = {C_1}*\exp[(-w_{x_1->y_1} * x_1 + w_{x_2->y_1} * x_2 + b_{y_1})]\\
-    \exp[B_1^{C_1}] = {C_1}*\exp[(-w_{x_1->y_1} * x_1)]*\exp[(w_{x_2->y_1} * x_2)]*\exp[(b_{y_1})]\\
-    \exp[B_1^{C_1}] = {C_1}*\exp[x_1]^{-w_{x_1->y_1}}*
-                            \exp[x_2]^{w_{x_2->y_1} }*
-                            \exp[(b_{y_1})]\\ 
-\end{multline}
-\hbox{let $u = \exp[x_1]$}\\
-\hbox{let $v = \exp[x_2]$}
-
-\begin{multline}\\
-    \exp[B_1^{C_1}] = {C_1}*u^{-w_{x_1->y_1}}*
-                            v^{w_{x_2->y_1} }*
-                            \exp[(b_{y_1})]\\ 
-\end{multline}
-
-\hbox{NOTE: SANITY CHECK}
-\begin{multline}\\
-    1 = e^{ax}+e^{by}\\
-    2^{1} = 2^{e^{ax}+e^{by}}\\
-    2^{1} = 2^{e^{ax}}2^{e^{by}}\\
-    \log_{2}2^{1} = \log_{2}(2^{e^{ax}}2^{e^{by}})\\
-    \log_{2}2^{1} = \log_{2}(2^{e^{ax}}) + \log_{2}(2^{e^{by}})\\
-\end{multline}
-
-
-
 
 
 
