--- a/Experiments/Minima_Visualization/trial5_ipynb/trial5.ipynb
+++ b/Experiments/Minima_Visualization/trial5_ipynb/trial5.ipynb
@@ -77579,12 +77579,15 @@
     "    for i, (x1, x2) in enumerate(X):\n",
     "        answer_tracker = [0,0,0]\n",
     "        if (x1 + x2) < (2*pixel_val_min + n):\n",
+    "            # WHITE\n",
     "            answer_tracker[0] = 1\n",
     "            y[i, 0] = 1\n",
     "        elif (x1 + x2) > (2*pixel_val_max - n):\n",
+    "            # BLACK\n",
     "            answer_tracker[1] = 1\n",
     "            y[i, 1] = 1\n",
     "        else:\n",
+    "            # GREY\n",
     "            answer_tracker[2] = 1\n",
     "            y[i, 2] = 1\n",
     "        input_tracker = np.add(answer_tracker,input_tracker) \n",
