--- a/Experiments/final final trial.ipynb
+++ b/Experiments/final final trial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "[5 rows x 785 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "[5 rows x 784 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
        "[5 rows x 784 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
        "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +725,7 @@
        "GaussianNB()"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
        "['trained_model.pkl']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -857,15 +857,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "asi;ong\n",
-      "a'rgi\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [9]\n",
+      "9 [2]\n",
       "Modifying pixel: Row:  0 , Column: 15 in image:  (0,) to pixel_val+1 changes the prediction from:  9 to:  [2]\n"
      ]
     },
@@ -979,7 +1008,7 @@
     "\n",
     "            # Test the modified image\n",
     "            modified_prediction = model.predict(scaled_temp_modified_image)\n",
-    "\n",
+    "            print(original_prediction, modified_prediction)\n",
     "            if original_prediction != modified_prediction:\n",
     "                # save original pic\n",
     "                # save modified pic\n",
@@ -997,7 +1026,7 @@
     "\n",
     "            # Test the modified image\n",
     "            modified_prediction = model.predict(scaled_temp_modified_image)\n",
-    "\n",
+    "            print(original_prediction, modified_prediction)\n",
     "            if original_prediction != modified_prediction:\n",
     "                # save original pic\n",
     "                # save modified pic\n",
