--- a/Experiments/Math_Equasions/Solve_for_Z_algibra/Solving_for_Z.tex
+++ b/Experiments/Math_Equasions/Solve_for_Z_algibra/Solving_for_Z.tex
@@ -765,6 +765,7 @@ $x^n$
 
 \hbox{$n =$ number of input parameters}
 \hbox{$x =$ number of different values n can take}
+\hbox{heelow i owuld oinaga;ogina}
 
 
 $(256*3)^{1280*720} \approx 10^{2659148}$
