--- a/Experiments/Math_Equasions/Solve_for_Z_algibra/Solving_for_Z.tex
+++ b/Experiments/Math_Equasions/Solve_for_Z_algibra/Solving_for_Z.tex
@@ -819,6 +819,13 @@ $x^n$
 \hbox{$x =$ number of different values n can take}
 \hbox{heelow i owuld oinaga;ogina}
 
+$
+S1(x) = \begin{cases} 
+    'white' & x_1 + x_2  < 255  - n \\
+    'Black' & x_1 + x_2  > 255  + n\\
+    'Grey'  & otherwise
+ \end{cases}
+$
 
 $(256*3)^{1280*720} \approx 10^{2659148}$
 
